RESOLVED FIXED116702
REGRESSION (r150399): Scrollbar missing for all overflow scroll
https://bugs.webkit.org/show_bug.cgi?id=116702
Summary REGRESSION (r150399): Scrollbar missing for all overflow scroll
Beth Dakin
Reported 2013-05-23 22:52:09 PDT
http://trac.webkit.org/changeset/150399 made it so scrollbars in overflow areas never paint. <rdar://problem/13963712>
Attachments
Patch (1.31 KB, patch)
2013-05-23 22:54 PDT, Beth Dakin
simon.fraser: review+
Beth Dakin
Comment 1 2013-05-23 22:54:56 PDT
Beth Dakin
Comment 2 2013-05-24 00:02:25 PDT
alan
Comment 3 2013-05-24 11:14:41 PDT
*** Bug 116721 has been marked as a duplicate of this bug. ***
Darin Adler
Comment 4 2013-05-24 17:28:47 PDT
Comment on attachment 202767 [details] Patch Why no regression test?
Beth Dakin
Comment 5 2013-05-24 17:29:53 PDT
We don't have a way to test overlay scrollbar painting.
alan
Comment 6 2013-05-28 01:36:29 PDT
(In reply to comment #5) > We don't have a way to test overlay scrollbar painting. We could mimic the animation suppress for the mock scrollbar theme (to make it not paint at all), but it might be an overstretch.
Note You need to log in before you can comment on or make changes to this bug.