https://bugs.webkit.org/show_bug.cgi?id=116702 REGRESSION (r150399): Scrollbar missing for all overflow scroll -and corresponding- <rdar://problem/13963712>

Reviewed by Simon Fraser.

This was a silly copy-paste error.
* rendering/RenderLayer.cpp:
(WebCore::RenderLayer::scrollbarAnimationsAreSuppressed):



Canonical link: https://commits.webkit.org/135011@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@150631 268f45cc-cd09-0410-ab3c-d52691b4dbfc